// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for size: "inherit" 1`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,currentcolor);
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media (forced-colors: active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,currentcolor) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() > should return correct css for size: "inherit" 2`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,currentcolor);
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media (forced-colors: active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,currentcolor) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() > should return correct css for size: "large" 1`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,undefined);
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media (forced-colors: active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,undefined) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() > should return correct css for size: "large" 2`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,undefined);
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media (forced-colors: active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,undefined) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() > should return correct css for size: "medium" 1`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,undefined);
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media (forced-colors: active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,undefined) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() > should return correct css for size: "medium" 2`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,undefined);
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media (forced-colors: active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,undefined) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() > should return correct css for size: "small" 1`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,undefined);
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media (forced-colors: active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,undefined) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() > should return correct css for size: "small" 2`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,undefined);
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media (forced-colors: active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,undefined) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() > should return correct css for size: {"base":"medium","xs":"small","s":"medium","m":"small","l":"medium","xl":"small"} 1`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,undefined);
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media (forced-colors: active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,undefined) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() > should return correct css for size: {"base":"medium","xs":"small","s":"medium","m":"small","l":"medium","xl":"small"} 2`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,undefined);
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media (forced-colors: active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,undefined) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;
